--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 OPENAI_API_KEY=your_openai_key_here
 GOOGLE_API_KEY=your_google_key_here
 ANTHROPIC_API_KEY=your_anthropic_key_here
+COST_LIMIT_USD=10.0
