--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,14 @@ pillow = "^11.3.0"
 python-multipart = "^0.0.20"
 httpx = "^0.28.1"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^9.0.2"
+pytest-asyncio = "^1.3.0"
+pytest-cov = "^7.0.0"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+
 [build-system]
 requires = ["poetry-core>=1.9.0"]
 build-backend = "poetry.core.masonry.api"
