--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -15,6 +15,7 @@ http {
         server host.docker.internal:8070;
     }
 
+    # All apps bind to port 8070 → https://localhost:8453
     server {
         listen 8443 ssl;
         server_name localhost;
@@ -26,11 +27,10 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
 
-        # Permissive CSP for camera/voice access
-        add_header X-Frame-Options "SAMEORIGIN" always;
+        # Permissive CSP for camera/voice access; frame-ancestors allows iframe embedding
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval' ws: wss: data: blob: mediastream:; img-src * data: blob: https:; media-src * blob: mediastream:;" always;
+        add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval' ws: wss: data: blob: mediastream:; img-src * data: blob: https:; media-src * blob: mediastream:; frame-ancestors 'self' https://localhost:*;" always;
 
         client_max_body_size 50M;
 
