--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ httpx = "^0.28.1"
 pytest = "^9.0.2"
 pytest-asyncio = "^1.3.0"
 pytest-cov = "^7.0.0"
+nicegui = "^2.0"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
